--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -20,11 +20,7 @@
     {% endif %}
     <div class="card-body">
         <div>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg unchecked"></span>
-            <span class="fa fa-star fa-lg unchecked"></span>
+            {% include 'rating_average.html' %}
         </div>
 
         {% include 'update_favorite.html' %}
